# TGT-QR

./: .env.example  .gitignore  ALTERNATIVE_DATA_SOURCES.md  CLAUDE.md  COMPREHENSIVE_TRADING_SYSTEM.md  README.md  api_test.py  aws_commands.sh  backtester.py  day1_test.py  debug_api.py  debug_auth.py  deploy_aws.sh  pyproject.toml  requirements.txt  strategy_optimizer.py  strategy_tester.py  symbol_check.py
config/: config.py
documentation/: trading_strategy.aux  trading_strategy.fdb_latexmk  trading_strategy.fls  trading_strategy.tex
hft/: ANALYSIS_SUMMARY.md  MEETING_NOTES.md  NEXT_STEPS.md  QUICK_REFERENCE.md  README.md  SIGNAL_FINDINGS.md  TEAM_SUMMARY.md  hft_alpha.py  hft_features_ethusdt_full_model_summary.txt  hft_features_model_summary.txt  hft_features_sample_model_summary.txt  parse.py  signal_analysis.py  signal_analysis_report.txt
logs/: trading.log.2025-10-09  trading.log.2025-10-10
mft/: ADAPTIVE_SYSTEM_EXPLAINED.md  BACKTESTING_GUIDE.md  BACKTEST_RESULTS_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  ML_STRATEGY_IDEAS.md  PROJECT_STRUCTURE.md  README.md  RESEARCH_LOG.md  RESEARCH_NOTES.md  RESEARCH_PLAN.md  RESEARCH_WORKFLOW.md  STRATEGY_ALTERNATIVES.md  STRATEGY_FOCUS_AVAX.md  STRATEGY_IMPROVEMENTS.md  STRATEGY_ITERATION_PLAN.md  STRATEGY_UNIFICATION.md  api_test.py  aws_commands.sh  deploy_aws.sh  requirements.txt
mft/config/: config.py
mft/data/: AVAXUSDT_cache.pkl  BTCUSDT_cache.pkl  DOGEUSDT_cache.pkl  ETHUSDT_cache.pkl  (+2 more)
qr_backtester/: __init__.py  engine.py  execution.py  metrics.py  portfolio.py  types.py
qr_data/: __init__.py  cache.py  types.py  validators.py
src/: dashboard.py  database.py  risk_manager.py  run_trading_system.py  scheduler.py  strategy.py
tests/: README.md  test_system.py
tools/: README.md  backtester.py  migrate_database.py
(+45 files in other folders)
